# simutrador-client

./: .env.sample  .gitignore  README.md  demo_sdk_offline.py  demo_sdk_usage.py  pyproject.toml  pyrightconfig.json  test_demo.py  test_real_websocket_auth.py
.augment/rules/: rules.md
demo/: DEMO_README.md  __init__.py  cli_demo.py  demo_sdk_offline.py  demo_sdk_usage.py  demo_ws_minimal.py
demo/flows/: normal.py  rate_limits.py
demo_flows/: invalid_inputs.py  normal.py  rate_limits.py
docs/: index.md
example/: .env.sample  README.md  backtest_strategy.py  data_service.py  main.py  pyproject.toml  run_all.py  strategy.py
scripts/deployment/: publish.sh
src/simutrador_client/: __init__.py  auth.py  cli.py  data_service.py  session.py  settings.py  store.py  strategy.py  websocket.py
tests/: __init__.py  conftest.py  test_auth_models.py  test_cli_health.py  test_cli_health_env_default.py  test_client_no_deadlock_on_tick.py  test_client_orders_api.py  test_settings_alias.py  test_settings_env_autodiscover.py  test_strategy_callbacks.py  test_strategy_session_handle.py  test_websocket_session_mvp.py  test_ws_health.py
tests/integration/: test_http_health_rate_limit_headers.py  test_rate_limiting_integration.py  test_start_simulation_flow.py  test_websocket_auth_flow.py
tests/unit/: test_auth.py  test_cli_auth.py  test_cli_session.py  test_data_service.py  test_rate_limiting_config.py  test_session.py  test_session_handler.py
