[project]
name = "simutrador-client"
version = "0.1.0"
description = "Official SimuTrador Python client SDK to connect to the simulation engine via WebSocket"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "websockets>=12.0",
  "simutrador-core>=1.0.8",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["simutrador_client"]

[dependency-groups]
dev = [
  "ruff>=0.11.0",
  "pyright>=1.1.376",
  "pytest>=8.2",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v", "--tb=short"]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
"simutrador-core" = { index = "testpypi" }
