[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "simutrador-client>=0.1.6",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
simutrador-client = { index = "testpypi" }
simutrador-core = { index = "testpypi" }